--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -11,6 +11,8 @@
 		</form>
 </div>
 
-<div id="posts">
-	<%= render "posts" %>
+<div class="row">
+	<div id="posts">
+		<%= render "posts" %>
+	</div>
 </div>
