--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -21,8 +21,8 @@ html, body, {
 .container { 
   height: auto; 
   min-height: 100%;
-  padding-left: 0px;
-  padding-right: 0px;
+  padding-left: 10px;
+  padding-right: 10px;
   // max-width: 970px;
 }
 
@@ -35,6 +35,7 @@ h4 {
   clear: both;
   font-weight: 900;
   color: #666;
+  font-size: 17px;
 }
 
 .center {
@@ -43,6 +44,10 @@ h4 {
   clear: both;
 }
 
+.row {
+  margin-left: 0px;
+  margin-right: 0px;
+}
 .alert h4 {
   margin: inherit;
 }
@@ -112,8 +117,6 @@ h4 {
   margin-bottom: 11px;
   margin-right: 11px;
   position: relative;
-  width: 225px;
-  height: 225px;
   background: #000;
   float: left;
   list-style: none;
@@ -141,6 +144,7 @@ h4 {
   border: none;
   -webkit-box-shadow: none;
   box-shadow: none;
+  display: inline;
   
 }
 
@@ -148,7 +152,7 @@ h4 {
   position: absolute;
   left: 0;
   top: 0;
-  width: 225px;
+  width: 100%;
   color: #ccc;
   font: normal 14px Helvetica, Sans-Serif;
   background: rgba(0,0,0, 0.9);
