media query tweaks to home index

--- a/app/assets/stylesheets/x-mediaqueries.css.scss
+++ b/app/assets/stylesheets/x-mediaqueries.css.scss
@@ -7,10 +7,10 @@
   }
   #post-index li {
     padding-left: 0px;
-    margin-right: 0px;
+    margin-right: 5px;
   }
   .img-responsive {
-    max-width: 100%;
+    max-width: 145px;
   }
 }
 
