--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,8 +1,5 @@
-<div class="col-md-4">
-	<img src="http://pagead2.googlesyndication.com/simgad/6235916075119015141" border="0" width="300" height="600" alt="" class="img_ad">
-</div>
-
-<div class="col-md-8">
+<div class="row">
+	<div class="col-md-8">
 	
 	<% if cookies[:auth_token] == @user.auth_token && @post.status == 0  %>
 		<div class="edit-buttons">
@@ -84,8 +81,11 @@
 		</div>
 	</div>
 
+<div class="col-md-4">
+	<img src="http://pagead2.googlesyndication.com/simgad/6235916075119015141" border="0" width="300" height="600" alt="" class="img_ad">
+</div>
 
-
+</div>
 
 
 
