update nginx conf for staging url

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,7 @@
                   <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="/"><%= image_tag "hplogo.png", :alt => "Heavy Peddler" %></a>
-                <h4 class="hidden-xs">This is Staging!!</h4>
+                <h4 >This is Staging!!</h4>
               </div>
               <!-- The Stuff inside the collapsed menu dropdown -->
               <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
