totally hacked to run rails 4

--- a/app/views/posts/_posts.html.erb
+++ b/app/views/posts/_posts.html.erb
@@ -22,7 +22,7 @@
 </ul>
 
 <div class="center">
-  <%= will_paginate @posts, renderer: BootstrapPagination::Rails, bootstrap: 3, :class => 'pagination-sm' %>
+   <%#= will_paginate @posts, renderer: BootstrapPagination::Rails, bootstrap: 3, :class => 'pagination-sm' %> 
 </div>
 
 
